--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
     "polished": "^3.4.4",
+    "proptypes": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -16,6 +17,8 @@
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.1.2",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^5.0.1"
   },
   "scripts": {
