--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "rules": {
         "prettier/prettier": "error",
         "import/prefer-default-export": "off",
+        "react/jsx-props-no-spreading": "off",
         "react/jsx-filename-extension": [
             "error",
             {
