--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     ],
     "rules": {
         "prettier/prettier": "error",
+        "import/no-cycle": "off",
         "import/prefer-default-export": "off",
         "react/jsx-props-no-spreading": "off",
         "react/jsx-filename-extension": [
